--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,6 +117,6 @@ card-img, .card-img-bottom, .card-img-top {
 }
 
 /* #mapa {
-    height: 100%;
-    width: 50%;
-  } */
+    height: auto;
+    width: auto;
+  }  */
